Closed Bug 1090242 Opened 10 years ago Closed 10 years ago

Fix some more bad implicit constructors in DOM

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch xSplinter Review
      No description provided.
Attachment #8512694 - Attachment is patch: true
Attachment #8512694 - Flags: review?(amarchesini)
Blocks: explicit
Attachment #8512694 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/be1a1fd58f11
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: