Bug 1090242 - Fix some more bad implicit constructors in DOM; r=baku